@@ -1,3 +1,8 @@
+2013-06-01  Hidehisa Akiyama  <akky@users.sourceforge.jp>
+
+	* rcsc/player/self_intercept_simulator.cpp:
+	- キーパーの場合はキャッチ可能エリアを縮小しない設定に変更
+
 2013-05-31  Hidehisa Akiyama  <akky@users.sourceforge.jp>
 
 	* rcsc/player/self_intercept_simulator.cpp:
